--- a/about/about.css
+++ b/about/about.css
@@ -1,63 +1,82 @@
-header {
-  background-image: url(/assets/img/img-cup_about.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.title-nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 10%;
-  transition: transform 0.1ms;
-}
-
-.title-nav:hover {
-  transform: scale(1.01);
-  border-bottom: 1px solid var(--four-color);
-  box-shadow: 5px 5px 5px var(--five-color);
-}
-
-.title-logotipo {
-  margin-left: 3%;
-  padding-top: 3%;
-  color: var(--one-color);
-  font-size: 20px;
-  padding-top: 5px;
-}
-
 .nav a {
   color: var(--one-color);
 }
-.nav a.active::after {
-  width: 71% !important;
-  margin-left: 2px !important;
+
+
+
+.title-about h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-.phrase-schedule {
-  color:var(--fourteen-color);
-  font-size: 35px;
+
+.title-about h1 {
+  position: absolute;
+  font-family: "Caveat", cursive;
+  color: var(--one-color);
+  font-size: 8rem;
+  left: 0;
+  top: 4rem !important;
+
+  /* bottom:10rem !important; */
+  z-index: 1 !important;
+}
+
+@media screen and (max-width: 1200px) {
+  .title-about h1 {
+    font-size: 7rem;
+  
+    /* bottom:16rem; */
+    
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title-about h1 {
+    font-size: 6rem;
+ 
+    /* bottom:13rem; */
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .title-about h1 {
+    font-size: 3.5rem !important;
+
+    /* bottom:19rem !important; */
+  }
+}
+
+
+.container-parade {
+  padding-top: 4rem;
+}
+.parade-phrase {
+  color: var(--fourteen-color);
+  font-size: 30px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  margin-bottom: 5%;
-  margin-top: 5%;
-  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
+  padding-bottom: 5%;
+  padding-top: 5rem;
+  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color);
 }
-.schedule{
-  color:var(--fourteen-color);
+.parade {
+  color: var(--fourteen-color);
   font-size: 35px;
   margin-left: 15%;
-  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
+  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color);
 }
 .name-stylist {
-  color:var(--two-color);
+  color: var(--two-color);
   font-size: 28px;
   text-align: center;
-  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
+  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color);
 }
 
-.text-schedule,
+.text-parade,
 .text-stylist {
   color: var(--two-color);
   font-size: 28px;
@@ -65,48 +84,57 @@ header {
   padding: 15px 0px;
   text-shadow: none;
 }
-.text-stylist{
+.text-stylist {
   margin-left: 15%;
 }
-.name-text-stylist{
+.name-text-stylist {
   display: flex;
   flex-direction: column;
 }
 
-.schedule1 {
+.parades {
   display: flex;
   flex-direction: row;
   margin-top: 5%;
   margin-bottom: 5%;
 }
-.video-schedule1 {
+.video-parade1 {
   width: 35%;
   height: 35%;
   margin-right: 10%;
   border-radius: 5px 10px 20px 30px;
 }
-.video-schedule2 {
+.video-parade2 {
   width: 35%;
   height: 35%;
   margin-left: 10%;
   border-radius: 5px 10px 20px 30px;
 }
 
+
+@media screen and (max-width: 768px) {
+  .parades{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+    
+  }
+}
 video {
   border-bottom: 1px solid var(--four-color);
   box-shadow: 5px 5px 5px var(--five-color);
 }
 
-.img-stylist{
+.img-stylist {
   width: 300px;
-  height: 400px;
+  height: 350px;
   box-shadow: 5px 5px 5px var(--five-color);
   border-radius: 5px 10px 20px 30px;
 }
 
 .container-stylists {
   width: 300px;
-  height: 400px;
+  height: 350px;
   margin: 3% auto 5% auto;
   position: relative;
 }
@@ -115,15 +143,16 @@ video {
   transform: translateX(-100%);
 }
 
-.flip-image{
+.flip-image {
   position: absolute;
   width: 100%;
   height: 100%;
   cursor: pointer;
   transform-style: preserve-3d;
-  transition: .5s;
+  transition: 0.5s;
 }
-.front-img-stylist, .back-text-stylist{
+.front-img-stylist,
+.back-text-stylist {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -132,37 +161,35 @@ video {
   backface-visibility: hidden;
 }
 
-.front-img-stylist{
+.front-img-stylist {
   background-size: cover;
 }
 
-.info-stylist{
+.info-stylist {
   padding: 30px;
   text-align: center;
   font-size: 20px;
-  color:var(--thirteen-color);
+  color: var(--thirteen-color);
 }
-.back-text-stylist{
+.back-text-stylist {
   background-color: var(--six-color);
 }
 
-
-
 @keyframes swing {
   0% {
-      transform: translateX(0);
+    transform: translateX(0);
   }
   25% {
-      transform: translateX(-10px) rotate(-5deg);
+    transform: translateX(-10px) rotate(-5deg);
   }
   50% {
-      transform: translateX(5px) rotate(3deg);
+    transform: translateX(5px) rotate(3deg);
   }
   75% {
-      transform: translateX(-5px) rotate(-3deg);
+    transform: translateX(-5px) rotate(-3deg);
   }
   100% {
-      transform: translateX(0) rotate(0);
+    transform: translateX(0) rotate(0);
   }
 }
 
