--- a/local/local.css
+++ b/local/local.css
@@ -1,9 +1,5 @@
-header {
-  background-image: url(/assets/img/img-location.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.title-nav {
+
+/* .title-nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -24,14 +20,18 @@ header {
   color: var(--one-color);
   font-size: 20px;
   padding-top: 5px;
-}
+} */
 
 .nav a {
   color: var(--one-color);
 }
-.nav a.active::after {
+/* .nav a.active::after {
   width: 70% !important;
   margin-left: 2px !important;
+} */
+
+.container-location{
+  padding-top:25rem;
 }
 
 .title-location {
@@ -43,7 +43,7 @@ header {
   text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
 }
 
-img {
+ .parade-copan{
   width: 350px;
   height: 300px;
   box-shadow: 5px 5px 5px var(--five-color);
@@ -51,11 +51,11 @@ img {
   margin: 5% 0% 2% 5%;
   transition: transform 0.1ms;
 }
-img:hover {
+.parade-copan:hover {
   transform: scale(1.1);
   border-bottom: 1px solid var(--four-color);
   box-shadow: 5px 5px 5px var(--five-color);
-}
+} 
 .location {
   color: var(--two-color);
   font-size: 24px;
@@ -126,3 +126,4 @@ iframe {
   margin-left: 8%;
   margin-bottom: 5%;
 }
+
