--- a/parade_form/parade_form.css
+++ b/parade_form/parade_form.css
@@ -1,85 +1,56 @@
-header {
-  background-image: url(/assets/img/img-form_cover.jpg);
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.904), rgba(0, 0, 0, 0.89)), 
+              url('/assets/img/teste.jpg') no-repeat center center;
+  margin: 0 0 100px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
+  opacity: 1;
+  background-color: black !important;
+ 
 }
-.title-nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 10%;
-  transition: transform 0.1ms;
-}
-.title-nav:hover {
-  transform: scale(1.01);
-  border-bottom: 1px solid var(--four-color);
-  box-shadow: 5px 5px 5px var(--five-color);
-}
-.title-logotipo {
-  margin-left: 3%;
-  padding-top: 3%;
-  color: var(--one-color);
-  font-size: 20px;
-  padding-top: 5px;
-}
-
 .nav a {
   color: var(--one-color);
 }
-.nav a.active::after {
-  width: 83% !important;
-  margin-left: 2px !important;
+.container-form{
+  padding-top:20rem;
 }
-
 .form-phrase {
   color: var(--two-color);
   text-align: center;
   font-size: 40px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  padding-top:4%;
+  padding-bottom: 10%;
 }
+
 .form {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
-.img-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--eleven-color);
-  width: 40%;
-  height: 90vh;
-  border-radius: 5px 10px 20px 30px;
-  border-bottom: 1px solid var(--four-color);
-  box-shadow: 5px 5px 5px var(--five-color);
-}
-.img-form > p {
+
+.confirm-presence > p {
   color: var(--twelve-color);
   font-size: 22px;
   margin-top: 1%;
 }
-.img-form > h3 {
+.confirm-presence > h2 {
   color: var(--one-color);
-  font-size: 30px;
-  margin-bottom: 1%;
+  font-size:3em;
+  padding-bottom: 8%;
+  text-align: center;
 }
-img {
-  width: 400px;
-  height: 450px;
-  border-radius: 5px 10px 20px 30px;
-}
+
 .questions {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 3%;
+  margin-bottom:5%;
   width: 40%;
   height: 72vh;
-  background-color: var(--eleven-color);
+  background-color: transparent;
   border-radius: 5px 10px 20px 30px;
   border-bottom: 1px solid var(--four-color);
   box-shadow: 5px 5px 5px var(--five-color);
@@ -116,7 +87,7 @@ img {
 }
 ::placeholder {
   color: var(--one-color);
-  opacity: 0.4;
+  opacity: 0.1;
 }
 .options {
   display: flex;
@@ -219,4 +190,8 @@ img {
   text-align: center;
   display:none;
   border-radius: 5px 10px 20px 30px;
+}
+
+footer{
+  color: aliceblue !important;
 }
