--- a/parade_schedule/parade_schedule.css
+++ b/parade_schedule/parade_schedule.css
@@ -1,57 +1,112 @@
-header {
-  background-image: url(/assets/img/img-cup_schedule.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+body {
+  margin: 0 ;
+  background-color: black !important;
+  min-height: 100vh;
+  overflow-x: hidden;
+ 
 }
 
-.title-nav {
+#video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100% !important;
+  background: rgba(0, 0, 0, 0.89); 
+  z-index: 0; 
+}
+
+
+.title-programming {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  height: 10%;
-  transition: transform 0.1ms;
+  width: 100%;
+  height: 100vh; 
 }
 
-.title-nav:hover {
-  transform: scale(1.01);
-  border-bottom: 1px solid var(--four-color);
-  box-shadow: 5px 5px 5px var(--five-color);
-}
-
-.title-logotipo {
-  margin-left: 3%;
-  padding-top: 3%;
+.title-programming h1 {
+  font-family: "Caveat", cursive;
   color: var(--one-color);
-  font-size: 20px;
-  padding-top: 5px;
+  font-size: 8rem;
+  margin: 0;
+  padding-top: 7rem;
+  padding-bottom:12rem;
+  z-index: 1;
 }
+
+@media screen and (max-width: 1200px) {
+  .title-programming h1 {
+    font-size: 7rem;
+    
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title-programming h1 {
+    font-size: 6rem;
+    padding-bottom:13rem;
+  }
+}
+
+/* @media screen and (max-width: 480px) {
+  .title-programming h1 {
+    font-size: 3.5rem;
+    padding-bottom:14rem;
+  }
+} */
+
+
+
+
+.container-form{
+  padding-top:6rem;
+  position: relative;
+  z-index: 1;
+}
+@media screen and (max-width:934px){
+  .container-form{
+   text-align: center !important;
+   padding-top: 7rem;
+  }
+} 
+
 
 .nav a {
   color: var(--one-color);
 }
-.nav a.active::after {
-  width: 85% !important;
-  margin-left: 2px !important;
-}
+
 
 .title-schedule {
-  color:var(--fourteen-color);
-  font-size: 48px;
+  color:var(--eighteen-color);
+  font-size: 42px;
   text-align: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
+  padding-top: 4%;
+  padding-bottom: 10%;
+  text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color);
+  position: relative;
+  z-index: 1;
 }
 .title-day {
   margin-top: 6%;
   margin-left: 10%;
-  color:var(--fourteen-color);
+  color:var(--eighteen-color);
   font-size: 30px;
   text-shadow: 0.1em 0.1em 0.2em var(--sixteen-color)
 }
 .days {
-  margin-bottom: 5%;
+  margin-bottom: 8%;
+  margin-top: 4%;
   width:60%;
   height:50vh;
   margin-left: auto;
@@ -61,6 +116,16 @@ header {
   border-bottom: 1px solid var(--four-color);
   box-shadow: 2px 2px 2px 1px var(--five-color);
 }
+@media screen and (max-width:1064px){
+  .days{
+    margin-left:2%;
+    margin-right: 2%;
+    width: auto;
+    height: auto;
+   padding-bottom: 1rem;
+   
+  }
+} 
 
 .days:hover{
   transform: scale(1.1);
@@ -70,21 +135,55 @@ header {
 .day {
   margin-top: 3%;
   margin-left: 5%;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: bold;
-  color: var(--two-color);
+  color: var(--seventeen-color);
 }
 .Prohibited,
 .timeline1 {
-  color: var(--two-color);
-  font-size: 25px;
+  color:var(--seventeen-color);
+  font-size: 1,56rem;
   font-weight: bold;
   margin-top: 2%;
   margin-left: 5%;
 }
 i {
-  color:var( --fifteen-color);
-  font-size: 21px;
-  margin-right: 5px;
+  color:var( --one-color);
+  font-size: 1.31rem;
+  margin-right: 6px;
 }
+footer{
+  position: relative;
+  z-index: 1;
+  color:var(--one-color) !important;
+  font-size: 15px !important;
+}
+
+
+.gradient-img{
+  display: none;
+}
+
+
+@media screen and (max-width:1064px){
+  .gradient-img{
+    display:block ;
+    position:absolute;
+    bottom:-0;
+    width: 100%;
+    height: 15%;
+    z-index:-1 !important;
+    background-image: linear-gradient(
+      to bottom,
+      transparent -1%,
+      var(---cor--color) 90%
+    );
+  }
+} 
+
+
+
+
+
+
 
